A few more adjustments...

--- a/wiffle/extras/_wiffle-lines.css
+++ b/wiffle/extras/_wiffle-lines.css
@@ -1,5 +1,5 @@
 /* ==========================================================================
-   _wiffle-lines.css
+   extras/_wiffle-lines.css
    ========================================================================== */
 
 /*-----------------( [ A ]LPHA )-----------------*/
