--- a/wiffle/extras/_wiffle-onoff.css
+++ b/wiffle/extras/_wiffle-onoff.css
@@ -1,5 +1,5 @@
 /* ==========================================================================
-   _wiffle-onoff.css
+   extras/_wiffle-onoff.css
    ========================================================================== */
 
 /*-----------------( [ A ]LPHA )-----------------*/
