Booyah! v4.0.0 up in da hizzy!
Word! Scope change log fo mo fo info!

--- a/demos/onoff/onoff.css
+++ b/demos/onoff/onoff.css
@@ -26,6 +26,8 @@
 	
 	.Boff { display: block !important; visibility: visible; }
 	.Coff { display: none !important; visibility: hidden; }
+	
+}
 
 @media only screen and (min-width: 1345px) {
 	
